--- a/cobuy/package.json
+++ b/cobuy/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.79.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-onesignal": "^5.2.11",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
