--- a/cobuy/server/package.json
+++ b/cobuy/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "node index.js",
+  "main": "index.js",
   "scripts": {
     "test": "node index.js"
   },
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.15.6",
-    "axios": "^1.6.0"
+    "pg": "^8.15.6"
   }
 }
