--- a/cobuy/server/package.json
+++ b/cobuy/server/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.15.6",
-    "axios": "^1.6.0"
+    "ws": "^8.18.2"
   }
 }
