--- a/cobuy/.env
+++ b/cobuy/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_API_BASE_URL=https://cobuy.up.railway.app
+#　EXPO_PUBLIC_API_BASE_URL=https://cobuy.up.railway.app
+EXPO_PUBLIC_API_BASE_URL=https://localhost:8080
