fix peer dependency

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,8 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./cobuy
-        run: npm install
+        - run: npm install --legacy-peer-deps
+
 
       - name: Run tests
         working-directory: ./cobuy
