--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,5 @@ jobs:
 
       - name: Run tests
         working-directory: ./cobuy
-        run: npm test
+        run: npm run test:backend
 # test
