--- a/cobuy/package.json
+++ b/cobuy/package.json
@@ -37,6 +37,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
