--- a/cobuy/server/package.json
+++ b/cobuy/server/package.json
@@ -16,6 +16,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "pg": "^8.15.6",
-    "ws": "^8.18.2"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.2",
+    "yamljs": "^0.3.0"
   }
 }
